--- a/styles/style.css
+++ b/styles/style.css
@@ -237,6 +237,48 @@ line-height: 26px;
 
 
 
+.destination{
+    margin: 40px 80px;
+}
+
+.destination_title h3{
+    color: #131318;
+text-align: center;
+font-size: 35px;
+font-weight: 800;}
+
+.destination_title p{
+    color: rgba(19, 19, 24, 0.70);
+text-align: center;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px; 
+margin-bottom: 50px;
+}
+
+.dest_img1{
+    grid-area: dest_img1;
+}
+
+.dest_img2{
+    grid-area: dest_img2;
+}
+
+.dest_img3{
+    grid-area: dest_img3;
+}
+.dest_img4{
+    grid-area: dest_img4;
+}
+.dest_img5{
+    grid-area: dest_img5;
+}
+.dest_img6{
+    grid-area: dest_img6;
+}
+.dest_img7{
+    grid-area: dest_img7;
+}
 
 
 
@@ -244,19 +286,114 @@ line-height: 26px;
 
 
 
+.dest_imgs{
+    display: grid;  
+    gap: 20px;
+    grid-template-areas: 
+    "dest_img1 dest_img1 dest_img1 dest_img2 dest_img2 dest_img2"
+    "dest_img3 dest_img3 dest_img4 dest_img4 dest_img4 dest_img5"
+    "dest_img6 dest_img6 dest_img7 dest_img7 dest_img7 dest_img7"
+    ;
+   
+}
+
+.dest{
+    position: relative;
+}
+
+.dest_imgs h4{
+    color: #FFF;
+font-size: 16px;
+font-weight: 800;
+position: absolute;
+content: '';
+left: 50%;
+top: 42%;
+transform: translate(-50%, -42%);
 
 
 
+}
+
+
+.dest img{
+    width: 100%;
+    height: 100%;
+}
 
 
 
+.choosing{margin: 80px 80px;
+}
+
+.choosing_title{
+    text-align: center;
+}
+
+.choosing_title h3{
+    color: #131318;
+font-size: 35px;
+font-weight: 800;
+}
 
 
+.choosing_title p{
+    color: rgba(19, 19, 24, 0.70);
+font-size: 16px;
+font-weight: 400;
+line-height: 26px; 
+}
 
 
+.hotel{
+    grid-area: hotel;
+    border-radius: 16px;
+border: 1px solid rgba(251, 181, 99, 0.20);
+background: rgba(251, 181, 99, 0.05);
+padding: 40px;
+
+}
+
+.service{
+    grid-area: service;
+    border-radius: 16px;
+border: 1px solid rgba(41, 206, 246, 0.20);
+background: rgba(41, 206, 246, 0.05);
+padding: 40px;
 
 
+}
 
+.price{
+    grid-area: price;
+    border-radius: 16px;
+border: 1px solid rgba(233, 68, 68, 0.20);
+background: rgba(233, 68, 68, 0.05);
+padding: 40px;
+
+}
+
+.choosing_contents h3{
+    color: #131318;
+font-size: 20px;
+font-weight: 800;
+
+}
+
+.choosing_contents p{
+    color: #5A5A5D;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+}
+
+.choosing_contents{
+    display: grid;
+    gap: 25px;
+    grid-template-areas: 
+    "hotel hotel service service"
+    "..price price..";
+}
 
 
 
@@ -304,5 +441,42 @@ line-height: 26px;
     margin-left: 10px;
     margin-right: 10px ;
 }
+
+
+.popular{
+    flex-direction: column;
+    margin: 0 10px;
+}
+.popular img{
+    width: 100%;
+}
+
+.destination{
+    margin: 40px 10px;
+}
+.dest_imgs{
+    display: flex;
+    justify-content: space-between;
+flex-direction: column;    
+}
+
+
+
+.dest img{
+    width: 100%;
+    max-height: 45vh;
+}
+.choosing_contents{
+   
+display: flex;
+justify-content: space-between;
+flex-direction: column;
+}
+
+.choosing{margin: 80px 10px;
+}
+
+
+
 }
 
